--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,13 @@
   "crons": [{
     "path": "/api/cron",
     "schedule": "0 10 * * *"
-  }]
+  }],
+  
+    "functions": {
+      "app/api/analyze-website/route.js": {
+        "memory": 3008,
+        "maxDuration": 30
+      }
+    }
+
 }
