--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@stripe/react-stripe-js": "^3.4.0",
     "@stripe/stripe-js": "^6.0.0",
     "@tanstack/react-query": "^5.62.7",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/blob": "^0.27.1",
     "@voiceflow/runtime-client-js": "^1.17.1",
     "@voiceflow/sdk-runtime": "^1.11.0",
