--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@clerk/nextjs": "^6.5.2",
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
+    "@google/generative-ai": "^0.24.1",
     "@headlessui/react": "^2.2.0",
     "@hookform/resolvers": "^3.9.1",
     "@prisma/client": "^6.0.1",
