--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "react-force-graph": "^1.45.4",
     "react-force-graph-3d": "^1.25.1",
     "react-hook-form": "^7.53.2",
+    "react-hot-toast": "^2.6.0",
     "react-intersection-observer": "^9.15.1",
     "react-redux": "^9.1.2",
     "react-resizable-panels": "^2.1.7",
