--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@emoji-mart/react": "^1.1.1",
     "@google/generative-ai": "^0.24.1",
     "@headlessui/react": "^2.2.0",
+    "@hello-pangea/dnd": "^18.0.1",
     "@hookform/resolvers": "^3.9.1",
     "@lemonsqueezy/lemonsqueezy.js": "^4.0.0",
     "@prisma/client": "^6.0.1",
