--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "d3": "^7.9.0",
     "d3-cloud": "^1.2.7",
     "date-fns": "^3.6.0",
+    "dotenv": "^17.2.3",
     "embla-carousel-react": "^8.5.1",
     "express": "^4.21.2",
     "framer-motion": "^11.15.0",
