--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@socket.io/redis-adapter": "^8.3.0",
     "@stripe/react-stripe-js": "^3.4.0",
     "@stripe/stripe-js": "^6.0.0",
+    "@tailwindcss/postcss": "^4.0.0",
     "@tanstack/react-query": "^5.62.7",
     "@vercel/analytics": "^1.5.0",
     "@vercel/blob": "^0.27.1",
@@ -119,8 +120,7 @@
     "stripe": "^17.4.0",
     "svix": "^1.62.0",
     "tailwind-merge": "^2.5.5",
-    "tailwind-scrollbar": "^3.1.0",
-    "tailwindcss": "^3.4.15",
+    "tailwindcss": "^4.0.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.171.0",
     "twilio": "^5.5.2",
