--- a/package.json
+++ b/package.json
@@ -120,9 +120,11 @@
     "stripe": "^17.4.0",
     "svix": "^1.62.0",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss": "^4.0.0",
+    "tailwind-scrollbar": "^4.0.2",
+    "tailwindcss": "^3.4.15",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.171.0",
+    "tw-animate-css": "^1.4.0",
     "twilio": "^5.5.2",
     "uuid": "^11.0.3",
     "vaul": "^1.1.1",
