--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@ai-sdk/openai": "^1.0.13",
     "@clerk/nextjs": "^6.5.2",
+    "@clerk/themes": "^2.4.43",
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
     "@google/generative-ai": "^0.24.1",
